--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@ title: yuin's blog
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+  <h1></h1>
+  <a href="http://www.flickr.com/photos/yuinchien/5012875428/" title="Untitled by tinyuin, on Flickr"><img src="http://farm5.static.flickr.com/4105/5012875428_6d56eece1f.jpg" width="500" height="499" alt="" /></a>
 </div>
