--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: yuin's blog
 
 <div id="home">
   <h1></h1>
-  <a href="http://www.flickr.com/photos/yuinchien/5012875428/" title="Untitled by tinyuin, on Flickr"><img src="http://farm5.static.flickr.com/4105/5012875428_6d56eece1f.jpg" width="500" height="499" alt="" /></a>
+  <img src="http://farm5.static.flickr.com/4105/5012875428_6d56eece1f.jpg" width="500" height="499" alt="" />
 </div>
