--- a/ideas.html
+++ b/ideas.html
@@ -4,7 +4,7 @@ title: Ideas
 ---
 
 <div id="home">
-  <h1>Process</h1>
+  <h1>hhhhhhhh</h1>
   <ul class="posts">
     {% for post in site.categories['ideas'] %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
