--- a/process.html
+++ b/process.html
@@ -4,9 +4,9 @@ title: Ideas
 ---
 
 <div id="home">
-  <h1>Ideas</h1>
+  <h1>Process</h1>
   <ul class="posts">
-    {% for post in site.categories['ideas'] %}
+    {% for post in site.categories['process'] %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
