Add homepage description

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ var WRInitTime=(new Date()).getTime();
   <h1></h1>
   <img src="http://farm5.static.flickr.com/4105/5012875428_6d56eece1f.jpg" width="500" height="499" alt="" />
 
+  <p class="yuin">Hello! This is my thesis blog, nothing is up yet, but soon!</p>
 
 </div>
 
