--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@ var WRInitTime=(new Date()).getTime();
   
   <div class="footer">
     <div class="contact">
-      <p>
-	    <a href="http://www.flickr.com/photos/yuinchien">photo</a>
-        <a href="http://github.com/cloud9">code</a>
-       </p>
+	  <li>
+	    <ol><a href="http://www.flickr.com/photos/yuinchien">photo</a></ol>
+        <ol><a href="http://github.com/cloud9">code</a></ol>
+		<ol><a href="http://yuinchien.com">portfolio</a></ol>
+      </li>
     </div>
   </div>
 </div>
