--- a/index.html
+++ b/index.html
@@ -44,11 +44,20 @@ var WRInitTime=(new Date()).getTime();
   
   <div class="footer">
     <div class="contact">
-	  <li>
-	    <ol><a href="http://www.flickr.com/photos/yuinchien">photo</a></ol>
-        <ol><a href="http://github.com/cloud9">code</a></ol>
-		<ol><a href="http://yuinchien.com">portfolio</a></ol>
-      </li>
+	  <table>
+	    <tr>
+		  <td>photo</td>
+		  <td><a href="http://www.flickr.com/photos/yuinchien">flickr.com/photos/yuinchien</a></td>
+		</tr>
+        <tr>
+		  <td>code</td>
+		  <td><a href="http://github.com/cloud9">github.com/cloud9</a></td>
+		</tr>
+		<tr>
+		  <td>portfolio</td>
+		  <td><a href="http://yuinchien.com">yuinchien.com</a></td>
+		</tr>
+      </table>
     </div>
   </div>
 </div>
