--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <span class="yuin"><a href="/">yuin</a></span>
+    <span class="yuin"><a href="/">.yuin</a></span>
     <a class="extra" href="/process">Process</a>
 	<a class="extra" href="/ideas">Ideas</a>
 	<a class="extra" href="/context">Context</a>
+	<a class="extra" href="/manifesto">Manifesto</a>
   </div>
   
   <div id="index">
   <h1></h1>
   <img src="http://farm5.static.flickr.com/4105/5012875428_6d56eece1f.jpg" width="500" height="499" alt="" />
 
-  <p class="yuin">Hello! This is my thesis blog, nothing is up yet, but soon!</p>
+  <p>Hello! This is my thesis blog, nothing is up yet, but soon!</p>
 
 </div>
 
