Basic css styling and tag page feature

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
    <!-- Typekit -->
-   <script type="text/javascript" src="http://use.typekit.com/qai1onp.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+   <!-- <script type="text/javascript" src="http://use.typekit.com/qai1onp.js"></script>
+   <script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
 
 </head>
 <body>
@@ -25,39 +25,63 @@ var WRInitTime=(new Date()).getTime();
 <!-- ClickTale end of Top part -->
 
 <div class="site">
-  <div class="title">
-    <span class="yuin"><a href="/">.yuin</a></span>
-    <a class="extra" href="/process">Process</a>
-	<a class="extra" href="/ideas">Ideas</a>
-	<a class="extra" href="/context">Context</a>
-	<a class="extra" href="/manifesto">Manifesto</a>
-  </div>
+	<div id="menuBg"></div>
+  <div id="menu">
+    <span class="homeTitle title"><a href="/">.yuin</a></span>
+    <span class="title"><a href="/process">_process</a></span>
+		<span class="title"><a href="/ideas">_ideas</a></span>
+		<span class="title"><a href="/context">_context</a></span>
+		<span class="title"><a href="/manifesto">_manifesto</a></span>
+  </div>                 
   
+  <div id="sideBar">
+  	<div class="section">
+			<div id="title">tags</div>
+			
+			<span class="tag"><a href="/tags/Interaction">Interaction</a></span>
+			
+			<span class="tag"><a href="/tags/physical">physical</a></span>
+			
+			<span class="tag"><a href="/tags/random">random</a></span>
+			
+			<span class="tag"><a href="/tags/haha">haha</a></span>
+			
+		</div>
+		<div class="section">
+			
+		</div>
+  </div>  
+
   <div id="index">
-  <h1></h1>
-  <img src="http://farm5.static.flickr.com/4105/5012875428_6d56eece1f.jpg" width="500" height="499" alt="" />
 
-  <p>Hello! This is my thesis blog, nothing is up yet, but soon!</p>
+  <!-- <img src="http://farm5.static.flickr.com/4105/5012875428_6d56eece1f.jpg" width="500" height="499" alt="" /> -->
 
+  <a href="http://www.flickr.com/photos/yuinchien/4732401666/" title="IMG_4186_2.jpg by tinyuin, on Flickr"><img src="http://farm2.static.flickr.com/1315/4732401666_c132a2d168_z.jpg" width="640" height="427" alt="IMG_4186_2.jpg" /></a>
+
+  <p>Hello! This is Yuin's thesis blog, sorry it's still under construction. Come back to visit sometimes.</p>
 </div>
 
 
   
   <div class="footer">
     <div class="contact">
-	  <table>
-	    <tr>
-		  <td>photo</td>
-		  <td><a href="http://www.flickr.com/photos/yuinchien">flickr.com/photos/yuinchien</a></td>
-		</tr>
-        <tr>
-		  <td>code</td>
-		  <td><a href="http://github.com/cloud9">github.com/cloud9</a></td>
-		</tr>
-		<tr>
-		  <td>portfolio</td>
-		  <td><a href="http://yuinchien.com">yuinchien.com</a></td>
-		</tr>
+	  	<table>
+				<tr>
+				  <td>/ work&nbsp; /</td>
+				  <td><a href="http://yuinchien.com">yuinchien.com</a></td>
+				</tr>
+				<tr>
+			  	<td>/ code&nbsp; /</td>
+			  	<td><a href="http://github.com/cloud9">github.com/cloud9</a></td>
+				</tr>
+		    <tr>
+			  	<td>/ photo /</td>
+			  	<td><a href="http://www.flickr.com/photos/yuinchien">flickr.com/photos/yuinchien</a></td>
+				</tr>
+				<tr>
+			  	<td>/ email /</td>
+			  	<td><a href="tinyuin.chien@gmail.com">tinyuin.chien@gmail.com</a></td>
+				</tr>
       </table>
     </div>
   </div>
