--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ var WRInitTime=(new Date()).getTime();
   
   <div id="sideBar">
   	<div class="section">
-			<div id="title">tags</div>
+			<div class="title">tags</div>
 			
 			<span class="tag"><a href="/tags/Interaction">Interaction</a></span>
 			
@@ -48,8 +48,11 @@ var WRInitTime=(new Date()).getTime();
 			
 		</div>
 		<div class="section">
-			
-		</div>
+			<div class="title"><span class="contactType">work</span><span><a href="http://yuinchien.com">yuinchien.com</a></span></div>
+			<div class="title"><span class="contactType">email</span><span><a href="http://yuinchien.com">yuinchien.com</a></span></div>
+			<div class="title"><span class="contactType">code</span><span><a href="http://github.com/cloud9">github.com/cloud9</a></span></div>
+			<div class="title"><span class="contactType">photo</span><span><a href="http://www.flickr.com/photos/yuinchien">flickr.com/photos/yuinchien</a></span></div>
+	  </div>
   </div>  
 
   <div id="index">
@@ -58,34 +61,14 @@ var WRInitTime=(new Date()).getTime();
 
   <a href="http://www.flickr.com/photos/yuinchien/4732401666/" title="IMG_4186_2.jpg by tinyuin, on Flickr"><img src="http://farm2.static.flickr.com/1315/4732401666_c132a2d168_z.jpg" width="640" height="427" alt="IMG_4186_2.jpg" /></a>
 
-  <p>Hello! This is Yuin's thesis blog, sorry it's still under construction. Come back to visit sometimes.</p>
+  <p>Hello! This is yuin's thesis blog, sorry it's still under construction. Come back to visit sometimes.</p>
 </div>
 
 
   
-  <div class="footer">
-    <div class="contact">
-	  	<table>
-				<tr>
-				  <td>/ work&nbsp; /</td>
-				  <td><a href="http://yuinchien.com">yuinchien.com</a></td>
-				</tr>
-				<tr>
-			  	<td>/ code&nbsp; /</td>
-			  	<td><a href="http://github.com/cloud9">github.com/cloud9</a></td>
-				</tr>
-		    <tr>
-			  	<td>/ photo /</td>
-			  	<td><a href="http://www.flickr.com/photos/yuinchien">flickr.com/photos/yuinchien</a></td>
-				</tr>
-				<tr>
-			  	<td>/ email /</td>
-			  	<td><a href="tinyuin.chien@gmail.com">tinyuin.chien@gmail.com</a></td>
-				</tr>
-      </table>
-    </div>
-  </div>
-</div>
+
+  
+</div> 
 
 
 <!-- ClickTale Bottom part -->
