clean up the post

--- a/context/index.html
+++ b/context/index.html
@@ -39,7 +39,11 @@ var WRInitTime=(new Date()).getTime();
 			<div class="title">tags</div>
 			
 			
-			<span class="tag"><a href="/tags/Interaction">Interaction</a></span>
+			<span class="tag"><a href="/tags/interaction">interaction</a></span>
+			
+			
+			
+			<span class="tag"><a href="/tags/tangible">tangible</a></span>
 			
 			
 			
@@ -48,10 +52,6 @@ var WRInitTime=(new Date()).getTime();
 			
 			
 			<span class="tag"><a href="/tags/random">random</a></span>
-			
-			
-			
-			<span class="tag"><a href="/tags/haha">haha</a></span>
 			
 			
 		</div>
@@ -77,6 +77,8 @@ var WRInitTime=(new Date()).getTime();
 					<p>this is a test post for category context.</p>
 				</div>
 				<div class="tags clearfix">
+					
+					<span class="tag"><a href="/tags/tangible">tangible</a></span>
 					
 				</div>
 	  </div>
