--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ var WRInitTime=(new Date()).getTime();
   	<div class="section">
 			<div class="title">tags</div>
 			
-			<span class="tag"><a href="/tags/Interaction">Interaction</a></span>
+			<span class="tag"><a href="/tags/interaction">interaction</a></span>
+			
+			<span class="tag"><a href="/tags/tangible">tangible</a></span>
 			
 			<span class="tag"><a href="/tags/physical">physical</a></span>
 			
 			<span class="tag"><a href="/tags/random">random</a></span>
-			
-			<span class="tag"><a href="/tags/haha">haha</a></span>
 			
 		</div>
 		<div class="section">
