Add guideline page & post

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@ var WRInitTime=(new Date()).getTime();
 	<div id="menuBg"></div>
   <div id="menu">
     <span class="homeTitle title"><a href="/">.yuin</a></span>
-    <span class="title"><a href="/process">_process</a></span>
-		<span class="title"><a href="/ideas">_ideas</a></span>
-		<span class="title"><a href="/context">_context</a></span>
-		<span class="title"><a href="/manifesto">_manifesto</a></span>
+    <span class="title process_link"><a href="/process">_process</a></span>
+		<span class="title ideas_link"><a href="/ideas">_ideas</a></span>
+		<span class="title context_link"><a href="/context">_context</a></span>
+		<span class="title manifesto_link"><a href="/manifesto">_manifesto</a></span>
+		<span class="title guideline_link"><a href="/guideline">_guideline</a></span>
   </div>                 
   
   <div id="sideBar">
