--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -66,12 +66,13 @@ var WRInitTime=(new Date()).getTime();
 
   <div id="manifesto" class="category">
 	
-	<div class="item">Always do more than you are expected to do.</div>
-	<div class="item">Don't be a wannabe. You are special, and you are good at something.</div>
-	<div class="item">You won't live forever, so do what you think is right.</div>
-	<div class="item">Be a good time manager. All-nighter is evil and unnecessary.</div>
-	<div class="item">You choose what you do because it makes you happy.</div>
+	<div class="item">Always do more than is asked of you.</div><br>
+	<div class="item">Don't be a wannabe.</div><br>
+	<div class="item">Be a master of time, not a slave.</div><br>
+	<div class="item">Listen carefully, and act critically.</div>
 	<div class="item">Nobody hates you. Maybe you are just not good enough... yet.</div>
+  <div class="item">Accept your failure and never do the same thing again.</div>  
+  <div class="item">It's your thesis, not others.</div>
 
 </div>
 
