--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -71,7 +71,7 @@ var WRInitTime=(new Date()).getTime();
 	<div class="item">Be a master of time, not a slave.</div><br>
 	<div class="item">Listen carefully, and act critically.</div>
 	<div class="item">Nobody hates you. Maybe you are just not good enough... yet.</div>
-  <div class="item">Accept your failure and never do the same thing again.</div>  
+  <div class="item">Accept your failure and don't make the same mistake again.</div>  
   <div class="item">It's your thesis, not others.</div>
 
 </div>
