--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@ var WRInitTime=(new Date()).getTime();
   	<div class="section">
 			<div class="title">tags</div>
 			
-			<span class="tag"><a href="/tags/interaction">interaction</a></span>
-			
 			<span class="tag"><a href="/tags/tangible">tangible</a></span>
 			
-			<span class="tag"><a href="/tags/physical">physical</a></span>
+			<span class="tag"><a href="/tags/dirty word">dirty word</a></span>
 			
-			<span class="tag"><a href="/tags/random">random</a></span>
+			<span class="tag"><a href="/tags/swear">swear</a></span>
 			
 		</div>
 		<div class="section">
