--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -40,19 +40,15 @@ var WRInitTime=(new Date()).getTime();
 			<div class="title">tags</div>
 			
 			
-			<span class="tag"><a href="/tags/interaction">interaction</a></span>
-			
-			
-			
 			<span class="tag"><a href="/tags/tangible">tangible</a></span>
 			
 			
 			
-			<span class="tag"><a href="/tags/physical">physical</a></span>
+			<span class="tag"><a href="/tags/dirty word">dirty word</a></span>
 			
 			
 			
-			<span class="tag"><a href="/tags/random">random</a></span>
+			<span class="tag"><a href="/tags/swear">swear</a></span>
 			
 			
 		</div>
@@ -67,13 +63,16 @@ var WRInitTime=(new Date()).getTime();
   <div id="manifesto" class="category">
 	
 	<div class="item">Always do more than is asked of you.</div><br>
-	<div class="item">Don't be a wannabe.</div><br>
 	<div class="item">Be a master of time, not a slave.</div><br>
-	<div class="item">Listen carefully, and act critically.</div>
-	<div class="item">Nobody hates you. Maybe you are just not good enough... yet.</div>
-  <div class="item">Accept your failure and don't make the same mistake again.</div>  
-  <div class="item">It's your thesis, not others.</div>
-
+	<div class="item">Listen carefully, and act critically.</div><br>
+	<div class="item">Nobody hates you. Maybe you are just not good enough... yet.</div><br>
+  <div class="item">Accept your failure and don't make the same mistake again.</div><br>
+  <div class="item">Don't talk about things you have no idea about. </div><br>
+	<div class="item">It's pathetic to be critical for the sake of being critical.</div><br>
+	<div class="item">Meaning is bullshit if it is all about you.</div><br>
+	<div class="item">Be tolerant, even if you don't agree with them.</div><br>
+	<!-- <div class="item"></div> -->
+	
 </div>
 
 
