add player info

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ var WRInitTime=(new Date()).getTime();
 
   <div class="description">
   	<p>The F*ck Counter: whenever someone says the f-word, the text will enlarge and the number add up.</p>
+		<p>Player: <a href="http://deekim.wordpress.com/">Dee</a> & me</p>
 	</div>
 
 </div>
