--- a/process/index.html
+++ b/process/index.html
@@ -85,7 +85,8 @@ var WRInitTime=(new Date()).getTime();
       	</div>
 				<div class="content">
 					<center><a href="http://www.flickr.com/photos/yuinchien/5084558570/" title="photo 1.PNG by tinyuin, on Flickr"><img src="http://farm5.static.flickr.com/4154/5084558570_bb4fb9da19.jpg" width="320" height="480" alt="photo 1.PNG" /></a></center>
-<p>The F*ck Counter: whenever someone says the f-word, the text will enlarge and the number add up.</p>
+<p>The F*ck Counter: whenever someone says the f-word, the text will enlarge and the number add up. <br />
+Player: <a href="http://deekim.wordpress.com/">Dee</a> &amp; me</p>
 				</div>
 				<div class="tags clearfix">
 					
