--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@ var WRInitTime=(new Date()).getTime();
 	
   <center><a href="http://www.flickr.com/photos/yuinchien/5084558570/" title="photo 1.PNG by tinyuin, on Flickr"><img src="http://farm5.static.flickr.com/4154/5084558570_bb4fb9da19.jpg" width="320" height="480" alt="photo 1.PNG" /></a></center>
 
-  <div class="description">
-  	<p>The F*ck Counter: whenever someone says the f-word, the text will enlarge and the number add up.</p>
-		<p>Player: <a href="http://deekim.wordpress.com/">Dee</a> & me</p>
-	</div>
+	<div class="description">The F*ck Counter</div>
+  <div class="description">Whenever someone says the f-word, the text will enlarge and the number add up.</div>
+	<!-- <div class="description">Player: <a href="http://deekim.wordpress.com/">Dee</a> & me</div> -->
 
 </div>
 
