--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -67,7 +67,7 @@ var WRInitTime=(new Date()).getTime();
 	<div class="item">Listen carefully, and act critically.</div><br>
 	<div class="item">Nobody hates you. Maybe you are just not good enough... yet.</div><br>
   <div class="item">Accept your failure and don't make the same mistake again.</div><br>
-  <div class="item">Don't talk about things you have no idea about. </div><br>
+  <div class="item">Don't talk about things you have no idea of. </div><br>
 	<div class="item">It's pathetic to be critical for the sake of being critical.</div><br>
 	<div class="item">Meaning is bullshit if it is all about you.</div><br>
 	<div class="item">Be tolerant, even if you don't agree with them.</div><br>
