--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ var WRInitTime=(new Date()).getTime();
 
   <div id="index">
 	
-  <center><a href="http://www.flickr.com/photos/yuinchien/5084558570/" title="photo 1.PNG by tinyuin, on Flickr"><img src="http://farm5.static.flickr.com/4154/5084558570_bb4fb9da19.jpg" width="320" height="480" alt="photo 1.PNG" /></a></center>
+  <center><img src="/assets/iphone_dirtyword.png" alt="iphone_dirtyword" /></center>
+
 
 	<div class="description">The F*ck Counter</div>
   <div class="description">Whenever someone says the f-word, the text will enlarge and the number add up.</div>
