add collection page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ var WRInitTime=(new Date()).getTime();
     <span class="title process_link"><a href="/process">_process</a></span>
 		<span class="title ideas_link"><a href="/ideas">_ideas</a></span>
 		<span class="title context_link"><a href="/context">_context</a></span>
+		<span class="title collection_link"><a href="/collection">_collection</a></span>
 		<span class="title manifesto_link"><a href="/manifesto">_manifesto</a></span>
-		<span class="title guideline_link"><a href="/guideline">_guideline</a></span>
   </div>                 
   
   <div id="sideBar">
