--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -31,8 +31,10 @@ var WRInitTime=(new Date()).getTime();
     <span class="title process_link"><a href="/process">_process</a></span>
 		<span class="title ideas_link"><a href="/ideas">_ideas</a></span>
 		<span class="title context_link"><a href="/context">_context</a></span>
+		<span class="title collection_link"><a href="/collection">_collection</a></span>
 		<span class="title manifesto_link"><a href="/manifesto">_manifesto</a></span>
-		<span class="title guideline_link"><a href="/guideline">_guideline</a></span>
+		
+		<!-- <span class="title guideline_link"><a href="/guideline">_guideline</a></span> -->
   </div>                 
   
   <div id="sideBar">
@@ -69,7 +71,7 @@ var WRInitTime=(new Date()).getTime();
   <div class="item">Accept your failure and don't make the same mistake again.</div><br>
   <div class="item">Don't talk about things you have no idea of. </div><br>
 	<div class="item">It's pathetic to be critical for the sake of being critical.</div><br>
-	<div class="item">Meaning is bullshit if it is all about you.</div><br>
+	<div class="item">Meaning is bs if it is all about you.</div><br>
 	<div class="item">Be tolerant, even if you don't agree with them.</div><br>
 	<!-- <div class="item"></div> -->
 	
