--- a/process/index.html
+++ b/process/index.html
@@ -72,7 +72,7 @@ var WRInitTime=(new Date()).getTime();
 					<span class="date">15 Oct 2010</span>
       	</div>
 				<div class="content">
-					<p>Trying to unscrew the table saw blade for cutting small edges on the wood panel. Working in the WoodShop always shatters my innocence of taking things for granted, and having the saw dust splashing over my body dissolves some of my <em>digitness</em>. I respect carpenter from the bottom of my heart, I really do.</p>
+					<p>Trying to unscrew the table saw blade for cutting small edges on the wood panel. Working in the WoodShop always shatters my innocence of taking things for granted, and having the saw dust splashing over my body helps dissolve some of my <em>digitness</em>. I respect carpenter from the bottom of my heart, I really do.</p>
 <p><a href="http://www.flickr.com/photos/yuinchien/5083897209/" title="Wood Shop Chaos by tinyuin, on Flickr"><img src="http://farm5.static.flickr.com/4111/5083897209_5d61c598f6_z.jpg" width="640" height="480" alt="Wood Shop Chaos" /></a></p>
 				</div>
 				<div class="tags clearfix">
@@ -86,7 +86,7 @@ var WRInitTime=(new Date()).getTime();
 					<span class="date">15 Oct 2010</span>
       	</div>
 				<div class="content">
-					<center><a href="http://www.flickr.com/photos/yuinchien/5084558570/" title="photo 1.PNG by tinyuin, on Flickr"><img src="http://farm5.static.flickr.com/4154/5084558570_bb4fb9da19.jpg" width="320" height="480" alt="photo 1.PNG" /></a></center>
+					<center><img src="/assets/iphone_dirtyword.png" alt="iphone_dirtyword" /></center>
 <p>The F*ck Counter: whenever someone says the f-word, the text will enlarge and the number add up. <br />
 Player: <a href="http://deekim.wordpress.com/">Dee</a> &amp; me</p>
 				</div>
