add video and photos of balloon project

--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -70,7 +70,7 @@ var WRInitTime=(new Date()).getTime();
 	<div class="item">Nobody hates you. You are just not good enough... yet.</div><br>
   <div class="item">Accept your failure and don't make the same mistake again.</div><br>
   <div class="item">Don't talk about things you have no idea of. </div><br>
-	<div class="item">It's pathetic to be critical for the sake of being critical.</div><br>
+	<div class="item">Being critical is not going to make you look smart.</div><br>
 	<div class="item">Meaning is bs if it is all about you.</div><br>
 	<div class="item">Be tolerant, even if you don't agree with others.</div><br>
 	<div class="item">Being in grad school doesn't have to be pretentious. </div><br>
