--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ var WRInitTime=(new Date()).getTime();
 
   <div id="index">
 	
-  <center><img src="/assets/iphone_dirtyword.png" alt="iphone_dirtyword" /></center>
+  <iframe src="http://player.vimeo.com/video/16292284?portrait=0&amp;color=ffffff" width="500" height="375" frameborder="0"></iframe>
 
 
-	<div class="description">The F*ck Counter</div>
-  <div class="description">Whenever someone says the f-word, the text will enlarge and the number add up.</div>
+	<!-- <div class="description">The F*ck Balloon</div>
+  <div class="description">Whenever someone says the f-word, the text will enlarge and the number add up.</div> -->
 	<!-- <div class="description">Player: <a href="http://deekim.wordpress.com/">Dee</a> & me</div> -->
 
 </div>
