add anti-social app lip example

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ var WRInitTime=(new Date()).getTime();
   	<div class="section">
 			<div class="title">tags</div>
 			
+			<span class="tag"><a href="/tags/Gen Y">Gen Y</a></span>
+			
+			<span class="tag"><a href="/tags/Graffiti">Graffiti</a></span>
+			
 			<span class="tag"><a href="/tags/tangible">tangible</a></span>
 			
 			<span class="tag"><a href="/tags/dirty word">dirty word</a></span>
