--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@ var WRInitTime=(new Date()).getTime();
 			
 			<span class="tag"><a href="/tags/dirty word">dirty word</a></span>
 			
+			<span class="tag"><a href="/tags/HTML5 Canvas">HTML5 Canvas</a></span>
+			
+			<span class="tag"><a href="/tags/Browser Extension">Browser Extension</a></span>
+			
 			<span class="tag"><a href="/tags/swear">swear</a></span>
 			
 		</div>
