pun added the comomment system

--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@ var WRInitTime=(new Date()).getTime();
 			
 			<span class="tag"><a href="/tags/tangible">tangible</a></span>
 			
+			<span class="tag"><a href="/tags/Html Canvas">Html Canvas</a></span>
+			
 			<span class="tag"><a href="/tags/dirty word">dirty word</a></span>
 			
 			<span class="tag"><a href="/tags/HTML5 Canvas">HTML5 Canvas</a></span>
+			
+			<span class="tag"><a href="/tags/Processing.js">Processing.js</a></span>
 			
 			<span class="tag"><a href="/tags/Browser Extension">Browser Extension</a></span>
 			
@@ -101,6 +105,8 @@ var pageTracker = _gat._getTracker("UA-6016902-1");
 pageTracker._trackPageview();
 </script>
 <!-- Google Analytics end -->
+
+
 
 </body>
 </html>
