--- a/ideas/index.html
+++ b/ideas/index.html
@@ -62,11 +62,19 @@ var WRInitTime=(new Date()).getTime();
 			
 			
 			
+			<span class="tag"><a href="/tags/Html Canvas">Html Canvas</a></span>
+			
+			
+			
 			<span class="tag"><a href="/tags/dirty word">dirty word</a></span>
 			
 			
 			
 			<span class="tag"><a href="/tags/HTML5 Canvas">HTML5 Canvas</a></span>
+			
+			
+			
+			<span class="tag"><a href="/tags/Processing.js">Processing.js</a></span>
 			
 			
 			
@@ -238,6 +246,21 @@ var WRInitTime=(new Date()).getTime();
   
 </div> 
 
+<!-- Comment Count -->
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'cloud9-github-com'; // required: replace example with your forum shortname
+    var disqus_developer = 1; // developer mode is on
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = 'http://disqus.com/forums/' + disqus_shortname + '/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
+<!-- Comment Count End -->
 
 <!-- ClickTale Bottom part -->
 <div id="ClickTaleDiv" style="display: none;"></div>
