--- a/index.html
+++ b/index.html
@@ -68,12 +68,11 @@ var WRInitTime=(new Date()).getTime();
 
   <div id="index">
 	
-  <iframe src="http://player.vimeo.com/video/16292284?portrait=0&amp;color=ffffff" width="500" height="375" frameborder="0"></iframe>
+  <iframe src="http://player.vimeo.com/video/17145092?portrait=0&amp;color=ffffff" width="570" height="442" frameborder="0"></iframe>
 
-
-	<!-- <div class="description">The F*ck Balloon</div>
-  <div class="description">Whenever someone says the f-word, the text will enlarge and the number add up.</div> -->
-	<!-- <div class="description">Player: <a href="http://deekim.wordpress.com/">Dee</a> & me</div> -->
+  <div class="description">Web Graffiti Experiment: Yawning Search Bar</div>
+  <div class="description">Why webpages should look the same? Can web space be less virtual by preserving the nuances and qualities that we treasure in the physical world? This Chrome Extension experiment is re-imaging the traditional UI elements in the browser, instead of having the generic looks, UI are shaped with freehand drawing strokes and the search bar is demonstrating the yawing behavior when the user  opens the google page.</div> 
+  <!-- <div class="description">Player: <a href="http://deekim.wordpress.com/">Dee</a> & me</div> -->
 
 </div>
 
