update css for all pages

--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -95,15 +95,16 @@ var WRInitTime=(new Date()).getTime();
   </div>  
 
   <div id="manifesto" class="category">
-	
+	<div class="post_container">
 	<div class="item">Always do more than is asked of you.</div><br>
 	<div class="item">Be a master of time, not a slave.</div><br>
 	<div class="item">Listen carefully, and act critically.</div><br>
 	<div class="item">Nobody hates you. You are just not good enough... yet.</div><br>
-  	<div class="item">Accept your failure and don't make the same mistake again.</div><br>
-  	<div class="item">Don't talk about things you have no idea of. </div><br>
+  <div class="item">Accept your failure and don't make the same mistake again.</div><br>
+  <div class="item">Don't talk about things you have no idea of. </div><br>
 	<div class="item">Be tolerant, even if you don't agree with others.</div><br>
 	
+</div>
 </div>
   
 
