new post for wikileaks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@ var WRInitTime=(new Date()).getTime();
 			
 			<span class="tag"><a href="/tags/Graffiti">Graffiti</a></span>
 			
+			<span class="tag"><a href="/tags/Reversing">Reversing</a></span>
+			
 			<span class="tag"><a href="/tags/tangible">tangible</a></span>
+			
+			<span class="tag"><a href="/tags/Hack">Hack</a></span>
 			
 			<span class="tag"><a href="/tags/lit review">lit review</a></span>
 			
