add posts in context and move all posts in collections to context

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@ var WRInitTime=(new Date()).getTime();
     <span class="title process_link"><a href="/process">_process</a></span>
 		<span class="title ideas_link"><a href="/ideas">_ideas</a></span>
 		<span class="title context_link"><a href="/context">_context</a></span>
-		<span class="title collection_link"><a href="/collection">_collection</a></span>
 		<span class="title manifesto_link"><a href="/manifesto">_manifesto</a></span>
   </div>                 
   
@@ -41,11 +40,11 @@ var WRInitTime=(new Date()).getTime();
 			
 			<span class="tag"><a href="/tags/Gen Y">Gen Y</a></span>
 			
+			<span class="tag"><a href="/tags/Surrealism">Surrealism</a></span>
+			
 			<span class="tag"><a href="/tags/Graffiti">Graffiti</a></span>
 			
 			<span class="tag"><a href="/tags/Reversing">Reversing</a></span>
-			
-			<span class="tag"><a href="/tags/tangible">tangible</a></span>
 			
 			<span class="tag"><a href="/tags/Hack">Hack</a></span>
 			
