add post in ida

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ var WRInitTime=(new Date()).getTime();
 			
 			<span class="tag"><a href="/tags/Gen Y">Gen Y</a></span>
 			
+			<span class="tag"><a href="/tags/Swear">Swear</a></span>
+			
 			<span class="tag"><a href="/tags/Surrealism">Surrealism</a></span>
 			
 			<span class="tag"><a href="/tags/Graffiti">Graffiti</a></span>
@@ -59,6 +61,8 @@ var WRInitTime=(new Date()).getTime();
 			<span class="tag"><a href="/tags/Processing.js">Processing.js</a></span>
 			
 			<span class="tag"><a href="/tags/Browser Extension">Browser Extension</a></span>
+			
+			<span class="tag"><a href="/tags/Code Violation">Code Violation</a></span>
 			
 			<span class="tag"><a href="/tags/swear">swear</a></span>
 			
