--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ var WRInitTime=(new Date()).getTime();
   	<div class="section">
 			<div class="title">tags</div>
 			
+			<span class="tag"><a href="/tags/Play">Play</a></span>
+			
 			<span class="tag"><a href="/tags/Gen Y">Gen Y</a></span>
 			
 			<span class="tag"><a href="/tags/Swear">Swear</a></span>
@@ -57,6 +59,8 @@ var WRInitTime=(new Date()).getTime();
 			<span class="tag"><a href="/tags/dirty word">dirty word</a></span>
 			
 			<span class="tag"><a href="/tags/HTML5 Canvas">HTML5 Canvas</a></span>
+			
+			<span class="tag"><a href="/tags/Kid">Kid</a></span>
 			
 			<span class="tag"><a href="/tags/Processing.js">Processing.js</a></span>
 			
