--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ var WRInitTime=(new Date()).getTime();
 			
 			<span class="tag"><a href="/tags/swear">swear</a></span>
 			
+			<span class="tag"><a href="/tags/Quote">Quote</a></span>
+			
 		</div>
 		<div class="section">
 			<div class="title"><span class="contactType">work</span><span><a href="http://yuinchien.com" target="_blank">yuinchien.com</a></span></div>
