add new posts for review2

--- a/index.html
+++ b/index.html
@@ -44,11 +44,17 @@ var WRInitTime=(new Date()).getTime();
 			
 			<span class="tag"><a href="/tags/Swear">Swear</a></span>
 			
+			<span class="tag"><a href="/tags/Web Standards">Web Standards</a></span>
+			
+			<span class="tag"><a href="/tags/Corporation">Corporation</a></span>
+			
 			<span class="tag"><a href="/tags/Surrealism">Surrealism</a></span>
 			
 			<span class="tag"><a href="/tags/Graffiti">Graffiti</a></span>
 			
 			<span class="tag"><a href="/tags/Reversing">Reversing</a></span>
+			
+			<span class="tag"><a href="/tags/Ad">Ad</a></span>
 			
 			<span class="tag"><a href="/tags/Hack">Hack</a></span>
 			
@@ -60,15 +66,23 @@ var WRInitTime=(new Date()).getTime();
 			
 			<span class="tag"><a href="/tags/HTML5 Canvas">HTML5 Canvas</a></span>
 			
+			<span class="tag"><a href="/tags/Facebook">Facebook</a></span>
+			
 			<span class="tag"><a href="/tags/Kid">Kid</a></span>
 			
 			<span class="tag"><a href="/tags/Processing.js">Processing.js</a></span>
 			
+			<span class="tag"><a href="/tags/Google">Google</a></span>
+			
 			<span class="tag"><a href="/tags/Browser Extension">Browser Extension</a></span>
+			
+			<span class="tag"><a href="/tags/Web">Web</a></span>
 			
 			<span class="tag"><a href="/tags/Code Violation">Code Violation</a></span>
 			
 			<span class="tag"><a href="/tags/swear">swear</a></span>
+			
+			<span class="tag"><a href="/tags/Privacy">Privacy</a></span>
 			
 			<span class="tag"><a href="/tags/Quote">Quote</a></span>
 			
