add img border and modify process/anti-like-magnet page

--- a/process/index.html
+++ b/process/index.html
@@ -194,11 +194,17 @@ Lucky Search Operator: Remo</p>
 					<span class="date">30 Jan 2011</span>
       	</div>
 				<div class="content">
-					<p>How many ads and junk information do we have to put up with everyday on the web? Why isn&#8217;t there a garbage cleaner at our disposal? I realized that blocking ads is rather passive and there should be &#8220;more&#8221; to express my feeling for the ads.</p>
-<p><img src="http://farm6.static.flickr.com/5164/5368220531_33152d496f_b.jpg" alt="" /></p>
-<p>I started this experiment with subverting web contents in mind, and chose web images to start. The experiment enables user to send out monsters to clean up images for them, and it&#8217;s on Chrome Store now, you can install it here: Pixel Monster.</p>
-<p>Install the Chrome Extension from <a href="https://chrome.google.com/extensions/detail/hpcnpeooeefjifgmdnfahcmkefgmpphj?hl=en">Chrome Store</a>.</p>
-<p>Check out what others have eaten on <a href="http://monster.detourlab.com">The Wall</a></p>
+					<p><iframe src="http://player.vimeo.com/video/20070285?portrait=0&amp;color=ffffff" width="580" height="384" frameborder="0"></iframe><br />
+Introducing the &#8220;Anti-Like Magnet&#8221; for Google Chrome! Think Twice Before You Like! <br />
+The Anti-Like Magnet lives in your facebook margin, allowing you to magnetize and paralyze Like features. Use the magnet to enable a like-proof social network.</p>
+<p>Install the Magnet: <a href="http://on.fb.me/dTtwKZ">http://magnet.detourlab.com</a><br />
+Visit the Magnet Wall: <a href="http://on.fb.me/dTtwKZ">http://on.fb.me/dTtwKZ</a></p>
+<p>Magnet Website<br />
+<img src="http://farm5.static.flickr.com/4141/5445816104_e09ffb69d0_z.jpg" alt="" /></p>
+<p>Magnet Screenshots<br />
+<img src="http://farm6.static.flickr.com/5054/5449848465_73e34be53a_z.jpg" alt="" /><br />
+<img src="http://farm6.static.flickr.com/5132/5450219646_d90a4947ae_z.jpg" alt="" /><br />
+<img src="http://farm6.static.flickr.com/5060/5449609813_df3aa8c659_z.jpg" alt="" /></p>
 				</div>
 				<div class="tags clearfix">
 					
