--- a/collection/index.html
+++ b/collection/index.html
@@ -33,16 +33,14 @@ var WRInitTime=(new Date()).getTime();
 <!-- ClickTale end of Top part -->
 
 <div id="collection_page" class="site">
-	<div id="menuBg"></div>
-  <div id="menu">
-    <span class="homeTitle title"><a href="/">.yuin</a></span>
-    <span class="title process_link"><a href="/process">_process</a></span>
-		<span class="title ideas_link"><a href="/ideas">_ideas</a></span>
-		<span class="title context_link"><a href="/context">_context</a></span>
+	<!-- <div id="menuBg"></div> -->
+  <div id="menu" style="width:200px;float:left;">
+		<div class="homeTitle title"><a href="/">Remix Interactions</a></div>
+    <div class="title process_link"><a href="/process">process</a></div>
+		<div class="title ideas_link"><a href="/ideas">ideas</a></div>
+		<div class="title context_link"><a href="/context">context</a></div>
 		<!-- <span class="title manifesto_link"><a href="/manifesto">_manifesto</a></span> -->
-		
-		<!-- <span class="title guideline_link"><a href="/guideline">_guideline</a></span> -->
-  </div>                 
+  </div>         
   
   <div id="sideBar">
   	<div class="section">
